[package]
name = "nym-mmorpg-client"
version = "0.1.0"
edition = "2021"

[dependencies]
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "master" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.26"
uuid = { version = "1.4", features = ["v4"] }
colored = "2.0"
