[package]
name = "nym-mmorpg-client"
version = "0.1.1"
edition = "2021"

[dependencies]
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "master" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.26"
uuid = { version = "1.4", features = ["v4"] }
colored = "2.0"
rustyline = "10.0.0"
dirs-next = "2.0.0"
chrono = "0.4"
# Enhanced logging support
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# Added for message authentication
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
# Added for replay protection
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.0"
