[package]
name = "nym-mmorpg-server"
version = "0.1.4"
edition = "2021"

[dependencies]
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "master" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
rand = "0.8"
uuid = { version = "1.4", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
lazy_static = "1.4"
# Added for message authentication
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
# Added for platform-specific data directories
dirs-next = "2.0.0"

[dev-dependencies]
tempfile = "3.0"